add quiz + achievement + update of services